kubernetes/ingress.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spotifygenres-vservice
  namespace: istio-system
spec:
  gateways:
    - default-gateway
  hosts:
  - spotifygenres.k8s.istio.kieranbamforth.me
  http:
  - name: "spotifygenres"
    route:
    - destination:
        host: spotifygenres-service.spotifygenres.svc.cluster.local
        port:
          number: 3000
